fixed main page text size and background image on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -143,8 +143,9 @@ a:hover {
   padding: 150px 0 200px 0;
   background-image: url('http://i.imgur.com/nWqmjUW.jpg');
   background-size: cover;
+  background-position: center center;
   color: #fff;
-  min-height: 100%;
+  height: 100%;
 }
 
 .about-page {
@@ -226,5 +227,8 @@ h3 strong {
     }
     .loading-bars {
       margin-top: 25px;
+    }
+    .main-header {
+      font-size: 1em;
     }
 }
